@@ -10,8 +10,7 @@
       <span class="monospace">{{ms.game.currentWorld.prestige}} </span>
       experience
 
-      <span *ngIf="ms.game.researches.overNineThousand.done
-      && ms.game.currentWorld.level.gt(this.maxLevel.times(0.9))">
+      <span *ngIf="ms.game.hasSecondMastery()">
         and one mastery point
       </span>
     </span>
